# ntp-arduino

./: .gitignore  CMakeLists.txt  LICENSE  rakefile
cmake/modules/: FindArduino.cmake
src/: main.cpp
